--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -5,6 +5,6 @@
         android:color="@android:color/black" />
     <item
         android:state_selected="false"
-        android:color="#D3D3D3" />
+        android:color="#A9A9A9" />
 
 </selector>
