--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_selected="true"
-        android:color="@android:color/black" />
+        android:color="#f4b350" />
     <item
         android:state_selected="false"
         android:color="#A9A9A9" />
