--- a/app/src/main/res/layout/activity_live_monitoring.xml
+++ b/app/src/main/res/layout/activity_live_monitoring.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#303030"
+    android:background="@color/white"
     tools:context=".LiveMonitoring">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -19,10 +19,11 @@
         app:menu="@menu/menu_nav" />
 
     <com.google.android.material.appbar.AppBarLayout
+
         android:id="@+id/appBarLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#212121"
+        android:background="#f4b350"
         android:theme="@style/Theme.CEON390ProjectGroup.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +33,8 @@
             android:id="@+id/toolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:popupTheme="@style/Theme.CEON390ProjectGroup.PopupOverlay" />
+            app:popupTheme="@style/Theme.CEON390ProjectGroup.PopupOverlay"
+            app:title="Live Monitoring" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -62,14 +64,14 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/tvSensorNameCO2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvSensorNameCO2"
-                    android:text="CO2 Sensor"
                     android:paddingTop="10dp"
+                    android:text="CO₂ Sensor"
+                    android:textColor="#535c68"
                     android:textSize="24sp"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -79,25 +81,30 @@
                         android:id="@+id/halfGaugeCO2"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:layout_centerInParent="true"/>
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginTop="-2dp"
+                        android:layout_marginEnd="130dp"
+                        android:layout_marginBottom="2dp" />
 
                     <ImageView
                         android:id="@+id/ivCO2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_info_24"
-                        app:tint="@color/white"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="20dp"
                         android:paddingBottom="10dp"
-                        android:layout_marginEnd="20dp"/>
+                        android:src="@drawable/ic_baseline_info_24"
+                        app:tint="#30336b" />
 
                 </RelativeLayout>
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/white"/>
+                    android:layout_height="4dp"
+                    android:background="#dcdde1"/>
 
             </LinearLayout>
 
@@ -118,7 +125,7 @@
                     android:paddingTop="10dp"
                     android:text="Ammonia Sensor"
                     android:textSize="24sp"
-                    android:textColor="@color/white"
+                    android:textColor="#535c68"
                     android:textStyle="bold"/>
 
                 <RelativeLayout
@@ -135,19 +142,19 @@
                         android:id="@+id/ivMQ135"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_info_24"
-                        app:tint="@color/white"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="20dp"
                         android:paddingBottom="10dp"
-                        android:layout_marginEnd="20dp"/>
+                        android:src="@drawable/ic_baseline_info_24"
+                        app:tint="#30336b" />
 
                 </RelativeLayout>
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/white"/>
+                    android:layout_height="4dp"
+                    android:background="#dcdde1"/>
 
             </LinearLayout>
 
@@ -168,7 +175,7 @@
                     android:paddingTop="10dp"
                     android:text="Smoke Sensor"
                     android:textSize="24sp"
-                    android:textColor="@color/white"
+                    android:textColor="#535c68"
                     android:textStyle="bold"/>
 
                 <RelativeLayout
@@ -185,19 +192,19 @@
                         android:id="@+id/ivMQ2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_info_24"
-                        app:tint="@color/white"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="20dp"
                         android:paddingBottom="10dp"
-                        android:layout_marginEnd="20dp"/>
+                        android:src="@drawable/ic_baseline_info_24"
+                        app:tint="#30336b" />
 
                 </RelativeLayout>
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/white"/>
+                    android:layout_height="4dp"
+                    android:background="#dcdde1"/>
 
             </LinearLayout>
 
@@ -218,7 +225,7 @@
                     android:paddingTop="10dp"
                     android:text="Methane Sensor"
                     android:textSize="24sp"
-                    android:textColor="@color/white"
+                    android:textColor="#535c68"
                     android:textStyle="bold"/>
 
                 <RelativeLayout
@@ -235,19 +242,19 @@
                         android:id="@+id/ivMQ4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_info_24"
-                        app:tint="@color/white"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="20dp"
                         android:paddingBottom="10dp"
-                        android:layout_marginEnd="20dp"/>
+                        android:src="@drawable/ic_baseline_info_24"
+                        app:tint="#30336b" />
 
                 </RelativeLayout>
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/white"/>
+                    android:layout_height="4dp"
+                    android:background="#dcdde1"/>
 
             </LinearLayout>
 
@@ -268,7 +275,7 @@
                     android:paddingTop="10dp"
                     android:text="Hydrogen Sensor"
                     android:textSize="24sp"
-                    android:textColor="@color/white"
+                    android:textColor="#535c68"
                     android:textStyle="bold"/>
 
                 <RelativeLayout
@@ -285,19 +292,19 @@
                         android:id="@+id/ivMQ8"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_info_24"
-                        app:tint="@color/white"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="20dp"
                         android:paddingBottom="10dp"
-                        android:layout_marginEnd="20dp"/>
+                        android:src="@drawable/ic_baseline_info_24"
+                        app:tint="#30336b" />
 
                 </RelativeLayout>
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/white"/>
+                    android:layout_height="4dp"
+                    android:background="#dcdde1"/>
 
             </LinearLayout>
 
@@ -318,7 +325,7 @@
                     android:paddingTop="10dp"
                     android:text="Carbon monoxide (CO) Sensor"
                     android:textSize="24sp"
-                    android:textColor="@color/white"
+                    android:textColor="#535c68"
                     android:textStyle="bold"/>
 
                 <RelativeLayout
@@ -335,19 +342,19 @@
                         android:id="@+id/ivMQ9"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_info_24"
-                        app:tint="@color/white"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="20dp"
                         android:paddingBottom="10dp"
-                        android:layout_marginEnd="20dp"/>
+                        android:src="@drawable/ic_baseline_info_24"
+                        app:tint="#30336b" />
 
                 </RelativeLayout>
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="@color/white"/>
+                    android:layout_height="4dp"
+                    android:background="#dcdde1"/>
 
             </LinearLayout>
 
@@ -369,7 +376,7 @@
                     android:paddingTop="10dp"
                     android:text="TVOC Sensor"
                     android:textSize="24sp"
-                    android:textColor="@color/white"
+                    android:textColor="#535c68"
                     android:textStyle="bold"/>
 
                 <RelativeLayout
@@ -386,12 +393,12 @@
                         android:id="@+id/ivTVOC"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_info_24"
-                        app:tint="@color/white"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="20dp"
                         android:paddingBottom="10dp"
-                        android:layout_marginEnd="20dp"/>
+                        android:src="@drawable/ic_baseline_info_24"
+                        app:tint="#30336b" />
 
                 </RelativeLayout>
 
