--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -2,15 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/live_nav"
-        android:title="Live"
-        android:icon="@drawable/ic_baseline_wifi_tethering" />
-
-    <item
         android:id="@+id/home_nav"
         android:title="Home"
         android:icon="@drawable/ic_baseline_home" />
-
+    <item
+        android:id="@+id/live_nav"
+        android:title="Live"
+        android:icon="@drawable/ic_baseline_wifi_tethering" />
+    <item
+        android:id="@+id/database_nav"
+        android:title="Database"
+        android:icon="@drawable/ic_baseline_dns_24" />
     <item
         android:id="@+id/settings_nav"
         android:title="Settings"
