--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#FFB446"
+    android:background="#F9D8A5"
     android:layout_height="match_parent"
     tools:context=".signUpActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFB446"
+        android:background="#F9D8A5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
             android:drawableStart="@drawable/custom_email_icon"
             android:drawablePadding="12dp"
             android:ems="10"
-            android:hint="Email Address"
+            android:hint="@string/LoginEmailText"
             android:inputType="textPersonName"
             android:minHeight="48dp"
             android:paddingStart="12dp"
