--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="gray">#586472</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="outer">#98a5e3</color>
+    <color name="middle">#8a7fb5</color>
+    <color name="inner">#d18ca0</color>
 </resources>
